[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
default-run = "day7"

[dependencies]
regex = "1.5.4"
partial_application = "0.2.1"
strum = "0.25"
strum_macros = "0.25"
memoize = "0.4.1"
trace = "*"
phf = { version = "0.11", features = ["macros"] }

[[bin]]
name = "day1"

[[bin]]
name = "day2"

[[bin]]
name = "day3"

[[bin]]
name = "day4"

[[bin]]
name = "day5"

[[bin]]
name = "day6"

[[bin]]
name = "day7"
